[tool.poetry]
name = "render-project"
version = "0.0.1"
description = "Base for a Render project"
authors = ["Kamil Nienałtowski <niekamil@protonmail.com>"]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"  # newer versions need env var (https://render.com/docs/python-version)
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
flake8 = "^5.0.4"
black = "^22.10.0"
mypy = "^0.982"

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
